# Project_5

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
data/: engagement_Xs.npy  engagement_cluster_centers.npy  engagement_meta.json  engagement_scaler_mean.npy  engagement_scaler_scale.npy  experience_cluster_centers.npy  experience_meta.json  experience_scaler_mean.npy  experience_scaler_scale.npy  report_summary.json  task1_correlation_matrix.csv  task1_results.json  task2_elbow.json  task2_results.json  task2_results_part1.json  task3_results.json  task4_cluster_avg.csv  task4_results.json  tellco_satisfaction.db-journal
reports/: .~lock.TellCo_Investor_Deck.pdf#  .~lock.TellCo_Investor_Report.pdf#  TellCo_Investor_Deck.pptx  TellCo_Investor_Report.docx  lu411kacp.tmp  lu431pol7.tmp  model_tracking_log.csv
reports/model_runs/: 20260715T085625Z_coefficients.json  20260715T085625Z_full_record.json  20260722T130326Z_coefficients.json  20260722T130326Z_full_record.json
scripts/: convert_to_csv.py  fast_xlsx_parse.py  generate_deck.js  generate_report.js  task1_overview.py  task1_plots.py  task2_elbow.py  task2_engagement.py  task2_plots.py  task3_experience.py  task3_plots.py  task4_db_export.py  task4_model_tracking.py  task4_plots.py  task4_satisfaction.py
src/tellco/: __init__.py  data_prep.py  feature_store.py  modeling.py
src/tellco_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_data_prep.py  test_feature_store.py  test_modeling.py
