[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tellco-analysis"
version = "0.1.0"
description = "Reusable data-prep, feature-store, and modeling package for the TellCo telecom xDR user-analytics project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "streamlit>=1.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]
